--- a/reportsetting/app/partials/partial1.html
+++ b/reportsetting/app/partials/partial1.html
@@ -1,25 +1,46 @@
 <div class="row-fluid" ng-controller="ColorCtrl">
   <span style="display: inline-block">
     <label><h4>Available</h4></label>
-    <select multiple="true" size="8" ng-model="color.colorOptions" ng-options="c.name for c in color.availableColors" ng-dblclick="color.toggleColors()"></select>
+    <select multiple="true" size="8" ng-model="color.availSelection" ng-options="c.name for c in color.availableColors" ng-dblclick="color.toggle(color.availSelection)"></select>
     <div class="btn-group btn-group-vertical">
-        <button type="button" class="btn add-columns" ng-click="color.addColor()"><i class="icon-arrow-right"></i></button>
-        <button type="button" class="btn remove-columns" ng-click="color.removeColor()"><i class="icon-arrow-left"></i></button>
+        <button type="button" class="btn" 
+          ng-click="color.addColor(color.availSelection)"
+          ng-disabled="!color.availSelection.length"><i class="icon-arrow-right"></i></button>
+        <button type="button" class="btn" 
+          ng-click="color.removeColor(color.selectedSelection)"
+          ng-disabled="!color.selectedSelection.length"><i class="icon-arrow-left"></i></button>
     </div>
   </span>
 
   <span style="display: inline-block">
     <label><h4>Selected</h4></label>
-    <select multiple="true" size="8" ng-model="color.colorOptions" ng-options="c.name for c in color.selectedColors" ng-dblclick="color.toggleColors()"></select>
+    <select multiple="true" size="8" ng-model="color.selectedSelection" ng-options="c.name for c in color.selectedColors" ng-dblclick="color.toggle(color.selectedSelection)"></select>
     <div class="btn-group btn-group-vertical">
-        <button type="button" class="btn move-up" ng-click="color.moveUp()" ng-disabled="!color.colorOptions.length"><i class="icon-arrow-up"></i></button>
-        <button type="button" class="btn move-down" ng-click="color.moveDown()"><i class="icon-arrow-down"></i></button>
+      <button type="button" class="btn" 
+        ng-click="color.moveTop(color.selectedSelection)"
+        ng-disabled="!color.canMoveUp(color.selectedSelection)"><i class="icon-arrow-up"></i> Top</button>
+      <button type="button" class="btn"
+        ng-click="color.moveUp(color.selectedSelection)"
+        ng-disabled="!color.canMoveUp(color.selectedSelection)"><i class="icon-arrow-up"></i></button>
+      <button type="button" class="btn"
+        ng-click="color.moveDown(color.selectedSelection)"
+        ng-disabled="!color.canMoveDown(color.selectedSelection)"><i class="icon-arrow-down"></i></button>
+      <button type="button" class="btn"
+        ng-click="color.moveBottom(color.selectedSelection)"
+        ng-disabled="!color.canMoveDown(color.selectedSelection)"><i class="icon-arrow-down"></i> Bottom</button>
     </div>
 
   </span>
 
+<hr>
+Available highlighted: 
 <pre>
-Currently selected: {{ {selected_color:color.colorOptions} | json }}
+{{ color.availSelection | json }}
+</pre>
+
+Selected highlighted: 
+<pre>
+{{ color.selectedSelection | json }}
 </pre>
 
 </div>
